--- a/now.json
+++ b/now.json
@@ -6,6 +6,11 @@
             "src": "/status",
             "dest": "/app.js",
             "methods": ["GET"]
+        },
+        {
+            "src": "/graphql",
+            "dest": "/app.js",
+            "methods": ["POST"]
         }
     ]
 }
