--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 PORT=8082
 
 # Database
-MONGODB_URI="mongodb+srv://sbeard:Ziggy2019!@step-rpznx.mongodb.net/test?retryWrites=true&w=majority"
+DB_HOST="step-rpznx.mongodb.net"
+DB_USERNAME="sbeard"
+DB_PASSWORD="Password123"
 
 # JWT
 JWT_SECRET="12435679"
