--- a/now.json
+++ b/now.json
@@ -8,6 +8,11 @@
             "methods": ["GET"]
         },
         {
+            "src": "/",
+            "dest": "/app.js",
+            "methods": ["GET"]
+        },
+        {
             "src": "/graphql",
             "dest": "/app.js",
             "methods": ["POST"]
