--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "scripts": {
-    "develop": "nodemon app",
-    "deploy": "now -e JWT_SECRET=@jwt_secret -e DB_USERNAME=@db_username -e DB_PASSWORD=@db_password -e DB_HOST=@db_host"
+    "develop": "nodemon index"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
