--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-graphql": "^0.9.0",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.25.3",
     "mongoose": "^5.8.11",
     "morgan": "^1.9.1"
   },
