--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
+    "google-auth-library": "^6.0.0",
     "graphql": "^14.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.25.3",
